--- a/CRMPhone/RequestDialog.xaml
+++ b/CRMPhone/RequestDialog.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:crmPhone="clr-namespace:CRMPhone"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+        xmlns:controls="clr-namespace:CRMPhone.Controls"
         mc:Ignorable="d"
-        Title="Заявка" Height="500" Width="600"
+        Title="Заявка" Height="600" Width="800"
         WindowStartupLocation="CenterOwner"
         d:DataContext="{d:DesignInstance crmPhone:RequestDialogViewModel}">
     <Grid Name ="RequestGrid">
@@ -28,29 +29,19 @@
             <ComboBox Margin="5" Width="65" DisplayMemberPath="FullName" SelectedItem="{Binding SelectedHouse}" ItemsSource="{Binding HouseList}" IsEditable="True" />
         </WrapPanel>
         <WrapPanel IsEnabled ="{Binding CanEdit}" Grid.Row="1">
-            <TextBlock Margin="5,5" Text="квартира:"/>
+            <ComboBox Margin="5" Width="45" DisplayMemberPath="Name" SelectedItem="{Binding SelectedAddressType}" ItemsSource="{Binding AddressTypeList}" IsEditable="True" />
             <ComboBox Margin="5" Width="45" DisplayMemberPath="Name" SelectedItem="{Binding SelectedFlat}" ItemsSource="{Binding FlatList}" IsEditable="True" />
             <TextBlock Margin="5,5" Text="подъезд:"/>
             <TextBox Margin="5" Width="45" Text="{Binding Path=Flat}"/>
             <TextBlock Margin="5,5" Text="этаж:"/>
             <TextBox Margin="5" Width="45" Text="{Binding Path=Flat}" />
         </WrapPanel>
-        <WrapPanel IsEnabled="{Binding CanEdit}" Grid.Row="2">
-            <TextBlock Margin="5,5" Text="Услуга:"/>
-            <ComboBox Margin="5" Width="125" DisplayMemberPath="Name" SelectedItem="{Binding SelectedParentService}" ItemsSource="{Binding ParentServiceList}" IsEditable="True" />
-            <TextBlock Margin="5,5" Text="Причина обращения:"/>
-            <ComboBox Margin="5" Width="240" DisplayMemberPath="Name" SelectedItem="{Binding SelectedService}" ItemsSource="{Binding ServiceList}" IsEditable="True" />
-        </WrapPanel>
+        <WrapPanel IsEnabled="{Binding CanEdit}" Grid.Row="2"/>
         <WrapPanel Grid.Row="3">
-            <TextBlock Margin="5,5" Text="Исполнитель:"/>
             <!--<TextBlock Margin="5,5" Width ="120" Text="{Binding SelectedWorker.FullName}"/>
             <Button Margin="5" Width="24">
                 <Image></Image>
             </Button>-->
-            <ComboBox Margin="5" Width="125" DisplayMemberPath="FullName" SelectedItem="{Binding SelectedWorker}" ItemsSource="{Binding WorkerList}" IsEditable="True" />
-            <TextBlock Margin="5,5" Text="Дата и время:"/>
-            <DatePicker  Margin="5,5" Width="180" SelectedDate="{Binding SelectedDateTime}">
-            </DatePicker>
 
         </WrapPanel>
 
@@ -64,7 +55,7 @@
                      Margin="5">
                 <ListBox.ItemContainerStyle>
                     <Style TargetType="ListBoxItem">
-                        <EventSetter Event="PreviewMouseUp" Handler="SelectCurrentItem"/>
+                        <EventSetter Event="PreviewMouseUp" Handler="SelectCurrentContact"/>
                     </Style>
                 </ListBox.ItemContainerStyle>
                 <ListBox.ItemTemplate>
@@ -79,9 +70,39 @@
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
-            <TextBlock Margin="5" Text="Описание:"/>
         </StackPanel>
-            <TextBox Grid.Row="5"
+        <Grid Grid.Row="5">
+            <ListBox Name ="RequestList"
+                     ItemsSource="{Binding Path=RequestList}" 
+                     SelectedItem ="{Binding Path=SelectedRequest}"
+                     Margin="10">
+                <ListBox.ItemContainerStyle>
+                    <Style TargetType="ListBoxItem">
+                        <EventSetter Event="PreviewMouseUp" Handler="SelectCurrentRequest"/>
+                        <Style.Triggers>
+                            <Trigger Property="IsSelected" Value="True" >
+                                <!--<Setter Property="FontWeight" Value="Bold" />-->
+                                <Setter Property="Background" Value="Transparent" />
+                                <Setter Property="Foreground" Value="Black" />
+                                <Setter Property="Margin" Value="5" />
+                            </Trigger>
+                        </Style.Triggers>
+                        <Style.Resources>
+                            <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Transparent" />
+                            <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="Transparent" />
+                        </Style.Resources>
+                    </Style>
+                </ListBox.ItemContainerStyle>
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <controls:RequestItem>
+
+                        </controls:RequestItem>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+        </Grid>
+        <TextBox Visibility="Collapsed" Grid.Row="5"
                      Margin="5"
                      TextWrapping="Wrap"
                      AcceptsReturn="True"
