--- a/CRMPhone/Controls/RequestItem.xaml
+++ b/CRMPhone/Controls/RequestItem.xaml
@@ -52,9 +52,16 @@
                             <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Gray"/>
                         </ComboBox.Resources>
                     </ComboBox>
-                    <TextBlock Margin="5,5" Text="Дата и время:"/>
-                    <DatePicker  Margin="5,5" Width="180" SelectedDate="{Binding SelectedDateTime}">
+                    <TextBlock Margin="5,5" Text="Дата:"/>
+                    <DatePicker  Margin="5,5" Width="140" SelectedDate="{Binding SelectedDateTime}">
                     </DatePicker>
+                    <TextBlock Margin="5,5" Text="Время:"/>
+                    <ComboBox Margin="5" Width="125" DisplayMemberPath="Name" SelectedItem="{Binding SelectedPeriod}" ItemsSource="{Binding PeriodList}" IsEditable="True">
+                        <ComboBox.Resources>
+                            <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Gray"/>
+                        </ComboBox.Resources>
+                    </ComboBox>
+
                     <CheckBox Margin="5" IsChecked="{Binding IsChargeable}">Платная</CheckBox>
                     <CheckBox Margin="5"  FontWeight="Bold" Foreground ="Red" IsChecked="{Binding IsImmediate}">Срочная</CheckBox>
 
