--- a/CRMPhone/Controls/RequestItem.xaml
+++ b/CRMPhone/Controls/RequestItem.xaml
@@ -10,67 +10,88 @@
     <Grid>
         <Border BorderBrush="Black" CornerRadius="5" BorderThickness="1">
             <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
-                <WrapPanel Grid.Row="0">
-                <TextBlock Margin ="5" Text="Номер заявки:"/>
-                    <TextBlock Margin="5" Text="{Binding RequestId}"/>
+                <WrapPanel Grid.Row="0" Grid.Column="0">
+                    <TextBlock Margin = "3" FontWeight ="Bold" VerticalAlignment="Center" Text="Номер заявки:"/>
+                    <TextBlock Margin = "3" FontWeight ="Bold" VerticalAlignment="Center" Text="{Binding RequestId}"/>
+                    <TextBlock Margin = "3" VerticalAlignment="Center" Text="Дата:"/>
+                    <TextBlock Margin = "3" VerticalAlignment="Center" Text="{Binding RequestDate, StringFormat='{}{0:dd.MM.yyyy HH:mm}'}"/>
+                    <TextBlock Margin = "3" VerticalAlignment="Center" Text="Солдатель:"/>
+                    <TextBlock Margin = "3" VerticalAlignment="Center" Text="{Binding RequestCreator}"/>
+                    <TextBlock Margin = "3" VerticalAlignment="Center" Text="Статус:"/>
+                    <TextBlock Margin = "3" VerticalAlignment="Center" Text="{Binding RequestState}"/>
                 </WrapPanel>
-                    <WrapPanel IsEnabled="{Binding CanEdit}" Grid.Row="1">
-                    <TextBlock Margin="5,5" Text="УК:"/>
-                    <ComboBox Margin="5" Width="125" DisplayMemberPath="Name" SelectedItem="{Binding SelectedCompany}" ItemsSource="{Binding CompanyList}" IsEditable="True" >
+                    <WrapPanel IsEnabled="{Binding CanSave}" Grid.Row="1" Grid.Column="0">
+                    <TextBlock Margin="3" VerticalAlignment="Center" Text="УК:"/>
+                    <ComboBox Margin="3" Width="125" DisplayMemberPath="Name" SelectedItem="{Binding SelectedCompany}" ItemsSource="{Binding CompanyList}" IsEditable="True" >
                         <ComboBox.Resources>
                             <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Gray"/>
                         </ComboBox.Resources>
                     </ComboBox>
 
-                    <TextBlock Margin="5,5" Text="Услуга:"/>
-                    <ComboBox Margin="5" Width="125" DisplayMemberPath="Name" SelectedItem="{Binding SelectedParentService}" ItemsSource="{Binding ParentServiceList}" IsEditable="True" >
+                    <TextBlock Margin="3" VerticalAlignment="Center" Text="Услуга:"/>
+                    <ComboBox Margin="3" Width="125" DisplayMemberPath="Name" SelectedItem="{Binding SelectedParentService}" ItemsSource="{Binding ParentServiceList}" IsEditable="True" >
                         <ComboBox.Resources>
                             <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Gray"/>
                         </ComboBox.Resources>
                     </ComboBox>
-                    <TextBlock Margin="5,5" Text="Причина:"/>
-                    <ComboBox Margin="5" Width="240" DisplayMemberPath="Name" SelectedItem="{Binding SelectedService}" ItemsSource="{Binding ServiceList}" IsEditable="True" >
+                    <TextBlock Margin="3" VerticalAlignment="Center" Text="Причина:"/>
+                    <ComboBox Margin="3" Width="240" DisplayMemberPath="Name" SelectedItem="{Binding SelectedService}" ItemsSource="{Binding ServiceList}" IsEditable="True" >
                         <ComboBox.Resources>
                             <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Gray"/>
                         </ComboBox.Resources>
                     </ComboBox>
                 </WrapPanel>
-                <WrapPanel Grid.Row="2">
-                    <TextBlock Margin="5,5" Text="Исполнитель:"/>
-                    <!--<TextBlock Margin="5,5" Width ="120" Text="{Binding SelectedWorker.FullName}"/>
-            <Button Margin="5" Width="24">
-                <Image></Image>
-            </Button>-->
-                    <ComboBox Margin="5" Width="125" DisplayMemberPath="FullName" SelectedItem="{Binding SelectedWorker}" ItemsSource="{Binding WorkerList}" IsEditable="True">
+                <WrapPanel Grid.Row="2" Grid.Column="0" IsEnabled="{Binding CanSave}">
+                    <TextBlock Margin="3" VerticalAlignment="Center" Text="Исполнитель:"/>
+                    <ComboBox Margin="3"  Width="125" DisplayMemberPath="FullName" SelectedItem="{Binding SelectedWorker}" ItemsSource="{Binding WorkerList}" IsEditable="True">
                         <ComboBox.Resources>
                             <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Gray"/>
                         </ComboBox.Resources>
                     </ComboBox>
-                    <TextBlock Margin="5,5" Text="Дата:"/>
-                    <DatePicker  Margin="5,5" Width="140" SelectedDate="{Binding SelectedDateTime}">
+                    <TextBlock Margin="3" VerticalAlignment="Center" Text="Дата:"/>
+                    <DatePicker  Margin="3" Width="140" SelectedDate="{Binding SelectedDateTime}">
                     </DatePicker>
-                    <TextBlock Margin="5,5" Text="Время:"/>
-                    <ComboBox Margin="5" Width="125" DisplayMemberPath="Name" SelectedItem="{Binding SelectedPeriod}" ItemsSource="{Binding PeriodList}" IsEditable="True">
+                    <TextBlock Margin="3" VerticalAlignment="Center" Text="Время:"/>
+                    <ComboBox Margin="3"  Width="125" DisplayMemberPath="Name" SelectedItem="{Binding SelectedPeriod}" ItemsSource="{Binding PeriodList}" IsEditable="True">
                         <ComboBox.Resources>
                             <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Gray"/>
                         </ComboBox.Resources>
                     </ComboBox>
-
-                    <CheckBox Margin="5" IsChecked="{Binding IsChargeable}">Платная</CheckBox>
-                    <CheckBox Margin="5"  FontWeight="Bold" Foreground ="Red" IsChecked="{Binding IsImmediate}">Срочная</CheckBox>
-
+                    <DockPanel>
+                        <CheckBox Margin="3" VerticalAlignment="Center" IsChecked="{Binding IsChargeable}">Платная</CheckBox>
+                        <CheckBox Margin="3" VerticalAlignment="Center" FontWeight="Bold" Foreground ="Red" IsChecked="{Binding IsImmediate}">Срочная</CheckBox>
+                    </DockPanel>
                 </WrapPanel>
-                <WrapPanel Grid.Row="3">
-                <TextBlock Margin="5" Text="{Binding Path=UniqueId}"></TextBlock>
-            <Button Margin="5" Width="120" Height="24" Command="{Binding ElementName=RequestGrid, Path=DataContext.SaveRequestCommand}"
+                <WrapPanel Grid.Row="3" Grid.Column="0" IsEnabled="{Binding CanSave}">
+                    <TextBlock Margin="3" VerticalAlignment="Center" Text="Примечание:"/>
+                    <TextBox Margin="3" Width="550" Height="48"
+                             MaxLength="1000" 
+                             TextWrapping="Wrap"
+                             AcceptsReturn="True"
+                             HorizontalScrollBarVisibility="Auto"
+                             VerticalScrollBarVisibility="Auto"
+                             Text="{Binding Description}"/>
+                </WrapPanel>
+                
+                <StackPanel Grid.Row="0" Grid.Column="1" Grid.RowSpan="3">
+            <Button Margin="5" Width="120" Height="24" IsEnabled ="{Binding CanSave}" Command="{Binding ElementName=RequestGrid, Path=DataContext.SaveRequestCommand}"
              CommandParameter="{Binding ElementName=RequestList, Path=SelectedItem}">Сохранить</Button>
-                </WrapPanel>
+                    <Button Margin="5" Width="120" Height="24" IsEnabled ="{Binding CanEdit}" Command="{Binding ElementName=RequestGrid, Path=DataContext.ChangeWorkerCommand}"
+             CommandParameter="{Binding ElementName=RequestList, Path=SelectedItem}">Исполнитель</Button>
+                    <Button Margin="5" Width="120" Height="24" IsEnabled ="{Binding CanEdit}" Command="{Binding ElementName=RequestGrid, Path=DataContext.ChangeDateCommand}"
+             CommandParameter="{Binding ElementName=RequestList, Path=SelectedItem}">Время</Button>
+                </StackPanel>
             </Grid>
         </Border>
     </Grid>
