--- a/CRMPhone/RequestDialog.xaml
+++ b/CRMPhone/RequestDialog.xaml
@@ -7,8 +7,9 @@
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         xmlns:controls="clr-namespace:CRMPhone.Controls"
         mc:Ignorable="d"
-        Title="Заявка" Height="600" Width="800"
+        Title="Заявка" MinHeight="600" MaxHeight="600" MinWidth ="900" MaxWidth="900" Height="600" Width="900"
         WindowStartupLocation="CenterOwner"
+        WindowStyle="ToolWindow"
         d:DataContext="{d:DesignInstance crmPhone:RequestDialogViewModel}">
     <Grid Name ="RequestGrid">
         <Grid.RowDefinitions>
@@ -17,42 +18,36 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <WrapPanel IsEnabled ="{Binding CanEdit}" Grid.Row="0">
-            <TextBlock Margin="5" Text="город:"/>
-            <ComboBox Margin="5" Width="100" DisplayMemberPath="Name" SelectedItem="{Binding SelectedCity}" ItemsSource="{Binding CityList}" IsEditable="True" />
-            <TextBlock Margin="5" Text="улица:"/>
-            <ComboBox Margin="5" Width ="150" DisplayMemberPath="NameWithPrefix" SelectedItem="{Binding SelectedStreet}" ItemsSource="{Binding StreetList}" IsEditable="True" />
-            <TextBlock Margin="5" Text="дом:"/>
-            <ComboBox Margin="5" Width="65" DisplayMemberPath="FullName" SelectedItem="{Binding SelectedHouse}" ItemsSource="{Binding HouseList}" IsEditable="True" />
+        <WrapPanel Margin="5" IsEnabled ="{Binding CanEdit}" Grid.Row="0">
+            <TextBlock Margin="3" VerticalAlignment="Center" Text="город:"/>
+            <ComboBox Margin="3" Width="100" DisplayMemberPath="Name" SelectedItem="{Binding SelectedCity}" ItemsSource="{Binding CityList}" IsEditable="True" />
+            <TextBlock Margin="3" VerticalAlignment="Center" Text="улица:"/>
+            <ComboBox Margin="3" Width ="150" DisplayMemberPath="NameWithPrefix" SelectedItem="{Binding SelectedStreet}" ItemsSource="{Binding StreetList}" IsEditable="True" />
+            <TextBlock Margin="3" VerticalAlignment="Center" Text="дом:"/>
+            <ComboBox Margin="3" Width="65" DisplayMemberPath="FullName" SelectedItem="{Binding SelectedHouse}" ItemsSource="{Binding HouseList}" IsEditable="True" />
+            <ComboBox Margin="3" Width="100" DisplayMemberPath="Name" SelectedItem="{Binding SelectedAddressType}" ItemsSource="{Binding AddressTypeList}" IsEditable="True" />
+            <ComboBox Margin="3" Width="45" DisplayMemberPath="Name" SelectedItem="{Binding SelectedFlat}" ItemsSource="{Binding FlatList}" IsEditable="True" />
+            <TextBlock Margin="3" VerticalAlignment="Center" Text="подъезд:"/>
+            <TextBox Margin="3" Width="45" Text="{Binding Path=Flat}"/>
+            <TextBlock Margin="3" VerticalAlignment="Center" Text="этаж:"/>
+            <TextBox Margin="3" Width="45" Text="{Binding Path=Flat}" />
         </WrapPanel>
-        <WrapPanel IsEnabled ="{Binding CanEdit}" Grid.Row="1">
-            <ComboBox Margin="5" Width="45" DisplayMemberPath="Name" SelectedItem="{Binding SelectedAddressType}" ItemsSource="{Binding AddressTypeList}" IsEditable="True" />
-            <ComboBox Margin="5" Width="45" DisplayMemberPath="Name" SelectedItem="{Binding SelectedFlat}" ItemsSource="{Binding FlatList}" IsEditable="True" />
-            <TextBlock Margin="5,5" Text="подъезд:"/>
-            <TextBox Margin="5" Width="45" Text="{Binding Path=Flat}"/>
-            <TextBlock Margin="5,5" Text="этаж:"/>
-            <TextBox Margin="5" Width="45" Text="{Binding Path=Flat}" />
-        </WrapPanel>
-        <WrapPanel IsEnabled="{Binding CanEdit}" Grid.Row="2"/>
-        <WrapPanel Grid.Row="3">
-            <!--<TextBlock Margin="5,5" Width ="120" Text="{Binding SelectedWorker.FullName}"/>
-            <Button Margin="5" Width="24">
-                <Image></Image>
-            </Button>-->
-
-        </WrapPanel>
-
-        <StackPanel IsEnabled ="{Binding CanEdit}" Grid.Row="4">
-            <TextBlock Margin ="5" Text="Контактные телефоны:"/>
-            <Button Margin ="5" Content="Добавить" Width="120" Command="{Binding AddContactCommand}" HorizontalAlignment="Left"/>
-            <ListBox Name="ContactListBox" Height ="100" Width="280" 
+        <StackPanel IsEnabled ="{Binding CanEdit}" Grid.Row="1">
+            <TextBlock Margin ="3" Text="Контактные телефоны:"/>
+            <Button Margin ="3" Content="Добавить" Width="120" Command="{Binding AddContactCommand}" HorizontalAlignment="Left"/>
+            <ListBox Name="ContactListBox"
                      HorizontalAlignment="Left" 
                      ItemsSource="{Binding Path=ContactList}" 
                      SelectedItem="{Binding Path=SelectedContact}"
-                     Margin="5">
+                     Margin="3">
+                <ListBox.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel HorizontalAlignment="Center" VerticalAlignment="Center" />
+                    </ItemsPanelTemplate>
+                </ListBox.ItemsPanel>
                 <ListBox.ItemContainerStyle>
                     <Style TargetType="ListBoxItem">
                         <EventSetter Event="PreviewMouseUp" Handler="SelectCurrentContact"/>
@@ -61,8 +56,8 @@
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <DockPanel>
-                            <CheckBox Margin="5" Content="Основной" IsChecked="{Binding Path=IsMain}" Command="{Binding ElementName=RequestGrid, Path=DataContext.ChangeCheckedStateCommand}"/>
-                            <TextBox Margin ="5" Width="125" Text="{Binding Path=PhoneNumber}" />
+                            <CheckBox Margin="3" Content="Основной" IsChecked="{Binding Path=IsMain}" Command="{Binding ElementName=RequestGrid, Path=DataContext.ChangeCheckedStateCommand}"/>
+                            <TextBox Margin ="3" Width="125" Text="{Binding Path=PhoneNumber}" />
                             <Button Margin="3" Command="{Binding ElementName=RequestGrid, Path=DataContext.DeleteCommand}">
                                 <Image Source="pack://application:,,,/Images/button_delete.png" Width="16" Height="16" />
                             </Button>
@@ -71,11 +66,14 @@
                 </ListBox.ItemTemplate>
             </ListBox>
         </StackPanel>
-        <Grid Grid.Row="5">
-            <ListBox Name ="RequestList"
+        <Grid Grid.Row="2">
+            <StackPanel>
+                <TextBlock Margin="3" Text="Заявки:"/>
+                <Button IsEnabled ="{Binding CanEdit}" Margin ="3" Content="Добавить" Width="120" Command="{Binding AddRequestCommand}" HorizontalAlignment="Left"/>
+                <ListBox Name ="RequestList" Height="340"
                      ItemsSource="{Binding Path=RequestList}" 
                      SelectedItem ="{Binding Path=SelectedRequest}"
-                     Margin="10">
+                     Margin="5">
                 <ListBox.ItemContainerStyle>
                     <Style TargetType="ListBoxItem">
                         <EventSetter Event="PreviewMouseUp" Handler="SelectCurrentRequest"/>
@@ -84,7 +82,7 @@
                                 <!--<Setter Property="FontWeight" Value="Bold" />-->
                                 <Setter Property="Background" Value="Transparent" />
                                 <Setter Property="Foreground" Value="Black" />
-                                <Setter Property="Margin" Value="5" />
+                                <!--<Setter Property="Margin" Value="5" />-->
                             </Trigger>
                         </Style.Triggers>
                         <Style.Resources>
@@ -101,19 +99,11 @@
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
+            </StackPanel>
         </Grid>
-        <TextBox Visibility="Collapsed" Grid.Row="5"
-                     Margin="5"
-                     TextWrapping="Wrap"
-                     AcceptsReturn="True"
-                     HorizontalScrollBarVisibility="Auto"
-                     VerticalScrollBarVisibility="Auto"
-                     MaxLength="1000"
-                     Text ="{Binding RequestMessage}"/>
-        <DockPanel Grid.Row="6">
-            <DockPanel HorizontalAlignment="Right">
-                <Button Content="Сохранить" Margin="5" Width="120" Command="{Binding SaveCommand}"/>
-                <Button Content="Закрыть" Margin="5" Width="120" Command="{Binding CloseCommand}"/>
+        <DockPanel Grid.Row="3">
+            <DockPanel Margin="3" HorizontalAlignment="Right">
+                <Button Content="Закрыть" Margin="3,3,15,3" Width="120" Command="{Binding CloseCommand}"/>
             </DockPanel>
         </DockPanel>
     </Grid>
