--- a/CRMPhone/ChangeExecuteDateDialog.xaml
+++ b/CRMPhone/ChangeExecuteDateDialog.xaml
@@ -1,11 +1,12 @@
-﻿<Window x:Class="CRMPhone.ChangeWorkerDialog"
+﻿<Window x:Class="CRMPhone.ChangeExecuteDateDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CRMPhone"
         mc:Ignorable="d"
-        Title="Исполнитель заявки" Height="300" Width="420" MinWidth ="420" MinHeight="300"
+        d:DataContext="{d:DesignInstance local:ChangeExecuteDateDialogViewModel}"
+        Title="Дата и время выполнения заявки" Height="300" Width="700" MinWidth ="700" MinHeight="300"
         WindowStartupLocation="CenterOwner"
         WindowStyle="ToolWindow">
     <Grid>
@@ -14,27 +15,43 @@
                 <TabItem.Header>
                     <StackPanel Orientation="Horizontal">
                         <!--<Image  Source="pack://application:,,,/Images/events_small.png" Stretch="UniformToFill" Height="28" />-->
-                        <TextBlock Margin="3" Text="Задать исполнителя"/>
+                        <TextBlock Margin="3" Text="Задать дату"/>
                     </StackPanel>
                 </TabItem.Header>
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
-                    <DockPanel Grid.Row="0">
-                        <TextBlock Margin="5" VerticalAlignment="Center" Text="Исполнитель:"/>
-                        <ComboBox Margin="5" HorizontalAlignment="Right" Width="185" DisplayMemberPath="FullName" SelectedItem="{Binding SelectedWorker}" ItemsSource="{Binding WorkerList}" IsEditable="True">
+                    <WrapPanel Grid.Row="0">
+                        <TextBlock Margin="3" VerticalAlignment="Center" Text="Дата:"/>
+                        <DatePicker  Margin="3" Width="140" SelectedDate="{Binding SelectedDateTime}">
+                        </DatePicker>
+                        <TextBlock Margin="3" VerticalAlignment="Center" Text="Время:"/>
+                        <ComboBox Margin="3"  Width="125" DisplayMemberPath="Name" SelectedItem="{Binding SelectedPeriod}" ItemsSource="{Binding PeriodList}" IsEditable="True">
                             <ComboBox.Resources>
                                 <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Gray"/>
                             </ComboBox.Resources>
                         </ComboBox>
+                    </WrapPanel>
+                    <DockPanel Grid.Row="1">
+                        <TextBlock Margin="3" VerticalAlignment="Center" Text="Примечание:"/>
+                        <TextBox Margin="3" Width="580" Height="48"
+                             MaxLength="1000" 
+                             TextWrapping="Wrap"
+                             AcceptsReturn="True"
+                             HorizontalScrollBarVisibility="Auto"
+                             VerticalScrollBarVisibility="Auto"
+                             Text="{Binding Description}"/>
+
+
                     </DockPanel>
-                    <StackPanel Grid.Row="1" HorizontalAlignment="Right">
+                    <StackPanel Grid.Row="2" HorizontalAlignment="Right">
                         <Button Margin="5" Width="120" Height="24" Command="{Binding Path=SaveCommand}">Сохранить</Button>
                     </StackPanel>
                 </Grid>
-                </TabItem>
+            </TabItem>
             <TabItem>
                 <TabItem.Header>
                     <StackPanel Orientation="Horizontal">
@@ -52,7 +69,7 @@
                     </DockPanel>
                     <DataGrid Grid.Row ="1" 
                           AutoGenerateColumns="False"
-                          ItemsSource="{Binding Path=WorkerHistoryList}"
+                          ItemsSource="{Binding Path=DateHistoryList}"
                           SelectionMode="Single"
                           SelectionUnit="FullRow"
                           IsReadOnly="True"
@@ -60,14 +77,18 @@
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="Время изменения" Width="120"
                              Binding="{Binding Path=CreateTime, StringFormat='{}{0:dd.MM.yyyy HH:mm}'}"></DataGridTextColumn>
-                            <DataGridTextColumn Header="Исполнитель" Width="120"
-                             Binding="{Binding Path=Worker.ShortName}"></DataGridTextColumn>
+                            <DataGridTextColumn Header="Дата исполнения" Width="110"
+                             Binding="{Binding Path=ExecuteTime, StringFormat='{}{0:dd.MM.yyyy}'}"></DataGridTextColumn>
+                            <DataGridTextColumn Header="Период" Width="100"
+                             Binding="{Binding Path=ExecutePeriod}"></DataGridTextColumn>
+                            <DataGridTextColumn Header="Примечание" Width="*"
+                             Binding="{Binding Path=Note}"></DataGridTextColumn>
                             <DataGridTextColumn Header="Создатель" Width="120"
                              Binding="{Binding Path=CreateUser.ShortName}"></DataGridTextColumn>
                         </DataGrid.Columns>
                     </DataGrid>
                 </Grid>
             </TabItem>
-            </TabControl>
+        </TabControl>
     </Grid>
 </Window>
