--- a/CRMPhone/TransferDialog.xaml
+++ b/CRMPhone/TransferDialog.xaml
@@ -6,8 +6,9 @@
         xmlns:local="clr-namespace:CRMPhone"
         mc:Ignorable="d"
         WindowStartupLocation="CenterOwner"
+        FontSize="14"
         d:DataContext="{d:DesignInstance local:TrasferDialogViewModel}"
-        Title="Перевести звонок" Height="100" Width="240" ResizeMode="NoResize" Icon="PhoneIco.ico">
+        Title="Перевести звонок" Height="100" Width="260" ResizeMode="NoResize" Icon="PhoneIco.ico">
     <Grid>
         <StackPanel>
             <DockPanel>
