--- a/CRMPhone/MainWindow.xaml
+++ b/CRMPhone/MainWindow.xaml
@@ -8,6 +8,7 @@
         xmlns:controls="clr-namespace:CRMPhone.Controls"
         xmlns:viewModel="clr-namespace:CRMPhone.ViewModel"
         mc:Ignorable="d"
+        FontSize="14"
         d:DataContext="{d:DesignInstance viewModel:CRMContext}"
         Title="{Binding AppTitle}" Height="600" Width="1000" MinWidth="1000" MinHeight="600" Closing="Window_Closing">
     <Grid>
