--- a/CRMPhone/Controls/RequestControl.xaml
+++ b/CRMPhone/Controls/RequestControl.xaml
@@ -17,13 +17,35 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <WrapPanel Grid.Row="0" HorizontalAlignment="Center">
-            <TextBlock Margin="3" VerticalAlignment="Center" Text="Дата с:"/>
-            <DatePicker  Margin="3" Width="110" SelectedDate="{Binding FromDate}"/>
-            <TextBlock Margin="3" VerticalAlignment="Center" Text="по:"/>
-            <DatePicker  Margin="3" Width="110" SelectedDate="{Binding ToDate}"/>
-            <Button Width="80" Margin="5" Content="Добавить" Command="{Binding AddRequestCommand}"/>
-            <Button Width="80" Margin="5" Content="Обновить" Command="{Binding RefreshRequestCommand}"/>
-            <Button Width="80" Margin="5" Content="Экспорт" Command="{Binding ExportRequestCommand}"/>
+            <Button Width="120" Margin="5,5,20,5" Content="Новая заявка" Command="{Binding AddRequestCommand}"/>
+            <TextBlock Margin="3" VerticalAlignment="Center" Text="№ заявки:"/>
+            <TextBox Margin="3" Width="60" Text="{Binding RequestNum}"  VerticalAlignment="Center"/>
+            <WrapPanel HorizontalAlignment="Center">
+            <TextBlock Margin="3" VerticalAlignment="Center" Text="улица:"/>
+            <ComboBox Margin="3" Width ="150" TabIndex ="2" DisplayMemberPath="NameWithPrefix" SelectedItem="{Binding SelectedStreet}" ItemsSource="{Binding StreetList}" IsEditable="True" PreviewKeyDown="tabItem_PreviewKeyDown"/>
+            <TextBlock Margin="3" VerticalAlignment="Center" Text="дом:"/>
+            <ComboBox Margin="3" Width="65" TabIndex ="3" DisplayMemberPath="FullName" SelectedItem="{Binding SelectedHouse}" ItemsSource="{Binding HouseList}" IsEditable="True" PreviewKeyDown="tabItem_PreviewKeyDown"/>
+            <ComboBox Margin="3" Width="100" TabIndex ="5" DisplayMemberPath="Name" SelectedItem="{Binding SelectedFlat}" ItemsSource="{Binding FlatList}" IsEditable="True" PreviewKeyDown="tabItem_PreviewKeyDown"/>
+            </WrapPanel>
+            <WrapPanel >
+                <TextBlock Margin="3" VerticalAlignment="Center" Text="услуга:"/>
+                <ComboBox Margin="3" Width="125" DisplayMemberPath="Name" SelectedItem="{Binding SelectedParentService}" ItemsSource="{Binding ParentServiceList}" IsEditable="True" />
+                <TextBlock Margin="3" VerticalAlignment="Center" Text="причина:"/>
+                <ComboBox Margin="3" Width="240" DisplayMemberPath="Name" SelectedItem="{Binding SelectedService}" ItemsSource="{Binding ServiceList}" IsEditable="True" />
+            </WrapPanel>
+            <TextBlock Margin="3" VerticalAlignment="Center" Text="статус:"/>
+            <ComboBox Margin="3" Width="80" DisplayMemberPath="Description" SelectedItem="{Binding SelectedStatus}" ItemsSource="{Binding StatusList}" IsEditable="True" />
+
+            <TextBlock Margin="3" VerticalAlignment="Center" Text="бригада:"/>
+            <ComboBox Margin="3" Width="120" DisplayMemberPath="FullName" SelectedItem="{Binding SelectedWorker}" ItemsSource="{Binding WorkerList}" IsEditable="True" />
+            <WrapPanel>
+                <TextBlock Margin="3" VerticalAlignment="Center" Text="Дата с:"/>
+                <DatePicker  Margin="3" Width="110" SelectedDate="{Binding FromDate}"/>
+                <TextBlock Margin="3" VerticalAlignment="Center" Text="по:"/>
+                <DatePicker  Margin="3" Width="110" SelectedDate="{Binding ToDate}"/>
+                <Button Width="80" Margin="5" Content="Обновить" Command="{Binding RefreshRequestCommand}"/>
+                <Button Width="80" Margin="5" Content="Экспорт" Command="{Binding ExportRequestCommand}"/>
+            </WrapPanel>
         </WrapPanel>
         <DataGrid Name="RequestsGrid" Grid.Row ="1" 
                           AutoGenerateColumns="False"
