--- a/CRMPhone/Controls/RequestItem.xaml
+++ b/CRMPhone/Controls/RequestItem.xaml
@@ -91,6 +91,10 @@
              CommandParameter="{Binding ElementName=RequestList, Path=SelectedItem}">Исполнитель</Button>
                     <Button Margin="5" Width="120" Height="24" IsEnabled ="{Binding CanEdit}" Command="{Binding ElementName=RequestGrid, Path=DataContext.ChangeDateCommand}"
              CommandParameter="{Binding ElementName=RequestList, Path=SelectedItem}">Время</Button>
+                    <Button Margin="5" Width="120" Height="24" IsEnabled ="{Binding CanEdit}" Command="{Binding ElementName=RequestGrid, Path=DataContext.ChangeStatusCommand}"
+             CommandParameter="{Binding ElementName=RequestList, Path=SelectedItem}">Статус</Button>
+                    <Button Margin="5" Width="120" Height="24" IsEnabled ="{Binding CanEdit}" Command="{Binding ElementName=RequestGrid, Path=DataContext.ChangeNoteCommand}"
+             CommandParameter="{Binding ElementName=RequestList, Path=SelectedItem}">Примечание</Button>
                 </StackPanel>
             </Grid>
         </Border>
