--- a/CRMPhone/MainWindow.xaml
+++ b/CRMPhone/MainWindow.xaml
@@ -9,7 +9,7 @@
         mc:Ignorable="d"
         FontSize="14"
         d:DataContext="{d:DesignInstance viewModel:CRMContext}"
-        Title="{Binding AppTitle}" Height="600" Width="1000" MinWidth="1000" MinHeight="600" Closing="Window_Closing">
+        Title="{Binding AppTitle}" Height="600" Width="1200" MinWidth="1200" MinHeight="600" Closing="Window_Closing">
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibility" />
     </Window.Resources>
@@ -105,7 +105,7 @@
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
-                    <DockPanel Grid.Row ="0" Margin="3">
+                    <WrapPanel Grid.Row ="0" Margin="3">
                         <TextBlock Margin="5" VerticalAlignment="Center" Text="№ заявки:"/>
                         <TextBox Margin="5" Width="50" Text="{Binding RequestNum}"/>
                         <TextBlock Margin="10,5" VerticalAlignment="Center" Text="Дата с:"/>
@@ -116,7 +116,7 @@
                         <ComboBox Margin="3" Width="125" DisplayMemberPath="ShortName" SelectedItem="{Binding SelectedUser}" ItemsSource="{Binding UserList}" IsEditable="True" />
 
                         <Button  Margin="5" Width="80" Height="24" Content="Обновить" Command="{Binding RefreshCommand}"/>
-                    </DockPanel>
+                    </WrapPanel>
                     <DataGrid Grid.Row ="1" Name="RecordGrid"
                           AutoGenerateColumns="False"
                           ItemsSource="{Binding Path=CallsList}"
